feat: add changelog
add changelog

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "typecript lib/tool template",
     "main": "index.js",
     "scripts": {
-        "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s && git add CHANGELOG.md"
+        "log": "conventional-changelog -p angular -i CHANGELOG.md -s && git add CHANGELOG.md"
     },
     "keywords": [
         "typecript",
@@ -16,13 +16,12 @@
         "@commitlint/cli": "^9.1.1",
         "@commitlint/config-conventional": "^9.1.1",
         "conventional-changelog-cli": "^2.1.0",
-        "cz-conventional-changelog": "^3.2.0",
         "cz-customizable": "^6.3.0",
         "husky": "^4.2.5"
     },
     "config": {
         "commitizen": {
-            "path": "./node_modules/cz-conventional-changelog"
+            "path": "node_modules/cz-customizable"
         }
     },
     "husky": {
