--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
     "name": "oh-my-ts-template",
     "version": "1.0.0",
     "description": "typecript lib/tool template",
+    "repository": "https://github.com/sucaizi/oh-my-ts-template",
     "main": "index.js",
     "scripts": {
-        "log": "conventional-changelog -p angular -i CHANGELOG.md -s && git add CHANGELOG.md"
+        "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s && git add CHANGELOG.md"
     },
     "keywords": [
         "typecript",
