--- a/package.json
+++ b/package.json
@@ -2,10 +2,18 @@
     "name": "oh-my-ts-template",
     "version": "1.0.0",
     "description": "typecript lib/tool template",
-    "repository": "https://github.com/sucaizi/oh-my-ts-template",
-    "main": "index.js",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/sucaizi/oh-my-ts-template.git"
+    },
+    "main": "dist/index.js",
+    "files": [
+        "dist",
+        "types"
+    ],
     "scripts": {
-        "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s && git add CHANGELOG.md"
+        "build": "rimraf dist types && gulp",
+        "changelog": "rimraf CHANGELOG.md && conventional-changelog -p angular -i CHANGELOG.md -s && git add CHANGELOG.md"
     },
     "keywords": [
         "typecript",
@@ -18,7 +26,12 @@
         "@commitlint/config-conventional": "^9.1.1",
         "conventional-changelog-cli": "^2.1.0",
         "cz-customizable": "^6.3.0",
-        "husky": "^4.2.5"
+        "gulp": "^4.0.2",
+        "gulp-typescript": "^6.0.0-alpha.1",
+        "husky": "^4.2.5",
+        "merge2": "^1.4.1",
+        "rimraf": "^3.0.2",
+        "typescript": "^3.9.7"
     },
     "config": {
         "commitizen": {
