--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
         "types"
     ],
     "scripts": {
-        "build": "npm run lint-strict && rimraf dist types && gulp",
-        "lint": "eslint src",
+        "build": "npm run lint && npm run test && rimraf dist types && gulp",
+        "lint": "eslint src test --max-warnings 0",
         "prettier": "prettier src test --write",
-        "lint-strict": "eslint src --max-warnings 0",
+        "test": "jest --bail --coverage",
         "changelog": "rimraf CHANGELOG.md && conventional-changelog -p angular -i CHANGELOG.md -s && git add CHANGELOG.md"
     },
     "keywords": [
@@ -27,19 +27,23 @@
     "devDependencies": {
         "@commitlint/cli": "^9.1.1",
         "@commitlint/config-conventional": "^9.1.1",
+        "@types/jest": "^26.0.9",
         "@typescript-eslint/eslint-plugin": "^3.9.0",
         "@typescript-eslint/parser": "^3.9.0",
         "conventional-changelog-cli": "^2.1.0",
         "cz-customizable": "^6.3.0",
         "eslint": "^7.6.0",
         "eslint-config-prettier": "^6.11.0",
+        "eslint-plugin-jest": "^23.20.0",
         "gulp": "^4.0.2",
         "gulp-typescript": "^6.0.0-alpha.1",
         "husky": "^4.2.5",
+        "jest": "^26.4.0",
         "lint-staged": "^10.2.11",
         "merge2": "^1.4.1",
         "prettier": "^2.0.5",
         "rimraf": "^3.0.2",
+        "ts-jest": "^26.2.0",
         "typescript": "^3.9.7"
     },
     "config": {
@@ -54,6 +58,9 @@
         }
     },
     "lint-staged": {
-        "*.ts": "npm run lint-strict"
+        "*.ts": [
+            "npm run lint",
+            "npm run test"
+        ]
     }
 }
