--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
         "types"
     ],
     "scripts": {
-        "build": "npm run lint && npm run test && rimraf dist types && gulp",
+        "prebuild": "npm run lint && npm run test",
+        "build": "rimraf dist types && gulp",
         "lint": "eslint src test --max-warnings 0",
         "prettier": "prettier src test --write",
         "test": "jest --bail --coverage",
-        "changelog": "rimraf CHANGELOG.md && conventional-changelog -p angular -i CHANGELOG.md -s && git add CHANGELOG.md"
+        "version": "rimraf CHANGELOG.md && conventional-changelog -p angular -i CHANGELOG.md -s && git add CHANGELOG.md"
     },
     "keywords": [
         "typecript",
@@ -52,9 +53,9 @@
         }
     },
     "husky": {
-        "hooks": {
-            "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-            "pre-commit": "lint-staged"
+        "hooks": {   
+            "pre-commit": "lint-staged",
+            "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
         }
     },
     "lint-staged": {
